--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
 
 html {
   block-size: 100%;
+  overflow: hidden;
 }
 
 .page {
@@ -35,4 +36,341 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.content{
+  display: grid;
+	grid-template-rows: repeat(2, 1fr);
+	grid-template-columns: repeat(2, 1fr);
+	gap: 30px;
+  margin-left: 30px;
+	width: 1140px;
+	height: 534px;
+  margin-top: 133px;
+  padding: auto;
+}
+
+.result{
+  width: 711px;
+  height: 456px;
+  gap:16px;
+  padding-top: 78px;
+}
+
+.result__video-container{
+  grid-area: 1 / 1 / 2 / 2;
+  width: 711px;
+  height: 386px;
+  margin-bottom: 16px;
+  position: relative;
+}
+
+.result__video{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 0;
+}
+
+.search-form{
+  grid-area: 2/1/3/2;
+  display: flex;
+  justify-content: space-between;
+  /*width: fit-content;*/
+}
+
+.search-form__fieldset-title{
+  height: 22px;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+}
+
+.content__details{
+  width: 100%;
+  height: 100%;
+}
+
+.title{
+  font-size: 75px;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
+  line-height: 71px;
+  width: 260px;
+  height: 210px;
+  text-transform: uppercase; 
+  grid-area: 1/2/2/3;
+}
+
+.content__accent{
+  color: #545050;
+}
+
+.content__list{
+  grid-area: 2/2/3/3;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 298px;
+  width: 403px;
+  margin-top: 26px;
+  position: relative;
+}
+
+.content__list-item{
+  width: 392px;
+  height: 107px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.content__list-item:first-child{
+ margin-top: 0;
+}
+
+.content__card-link{
+ text-decoration: none;
+}
+
+.content__card-link:active{
+  background-color: #545050;
+ }
+
+.content__video-card{
+  width: 394px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.content__video-card:focus-visible{
+  padding: 2px;
+  outline: 1px solid #FFF;
+}
+
+.content__card-link_current{
+  background-color: #545050;
+}
+
+.content__video-card:hover{
+  text-decoration: underline;
+  color: #FFF;
+}
+
+.content__video-card-description-container{
+  height: 101px;
+  gap: 6px;
+  padding-top: 4px;
+  padding-left: 2px;
+}
+
+.content__video-card-title{
+  width: 200px;
+  height: 30px;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 30px;
+  color: #fff;
+  text-transform: uppercase; 
+}
+
+.content__video-card-description{
+  width: 200px;
+  height: 65px;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 16px;
+  color: #fff;
+  object-fit: cover;
+}
+
+.content__video-card-thumbnail{
+  height: 106px;
+  width:194px;
+  background-repeat: repeat;
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+} 
+
+fieldset{
+  border:0;
+}
+
+:focus{
+  border: 1px solid #FFF;
+  padding: 2px;
+}
+
+.search-form__textfield, search-form__textfield:focus-visible{
+  background-color: transparent;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #FFFFFFB2;
+  appearance: none;
+}
+
+.search-form__textfield:active{
+  border: 1px solid;
+}
+
+.search-form__textfield:has(:focus-visible){
+  border: 1px solid;
+  padding: 1px;
+}
+
+input{
+  display: flex;
+  background-color: transparent;
+  width: 211px;
+  height: 22px;
+  border-style: solid;
+  border-color: #FFF;
+  border-width: 1px 0px;
+  gap: 10px;
+  padding: 0;
+  appearance: none;
+  color: rgb(255, 255, 255, 0.7);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  font-family: 'Fira Sans Condensed', sans-serif;
+}
+
+textarea:focus, input:focus {
+  outline: none;
+}
+
+.search-form__label:hover:has(.search-form__pseudo-checkbox) {
+  text-decoration: underline;
+}
+
+.search-form__checkbox-list{
+  display: flex;
+  gap:15px
+}
+
+.search-form__fieldset{
+  width: 225px;
+  height: 54px;
+  gap: 5px;
+}
+
+.search-form__fieldset:last-of-type{
+  margin-left: 12px;
+}
+
+.search-form__textfield{
+  width: 225px;
+  height: 27px;
+}
+
+.search-form__pseudo-checkbox{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #fff;
+  inline-size: 19px;
+  block-size: 19px;
+  margin-right: 5px;
+  width: 19px;
+  height: 19px;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox:after {
+  content: "";
+  position: relative;
+  display: block;
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+}
+
+.search-form__checkbox:focus{
+  outline: none;
+}
+
+.search-form__checkbox:focus-visible{
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__pseudo-checkbox:checked{
+  border: 1px solid #545050;
+}
+
+.search-form__label{
+  cursor: pointer;
+  display: flex;
+  margin-top: 5px;
+  align-items: center;
+}
+
+.search-form__label-text{
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+}
+
+button{
+  height: 34px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  cursor: pointer;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  color: #fff;
+  border: #fff solid 1px;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.more-button{
+  width: 396px;
+  margin-top: 30px;
+}
+
+button:focus {
+  outline: none;
+}
+
+button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+button:active{
+ background-color: #545050 ;
+}
+
+button:hover{
+  text-decoration: underline;
+}
+
+.search-form__submit-button{
+  width: 194px;
+  margin-top: 20px;
+}
+
+.content__list::-webkit-scrollbar {
+  width: 0;
 }
