--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,6 @@
 
 html {
   block-size: 100%;
-  overflow: hidden;
 }
 
 .page {
@@ -17,6 +16,9 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h1,
@@ -31,6 +33,7 @@ blockquote,
 fieldset {
   margin: 0;
   padding: 0;
+  border: 0px;
 }
 
 ul,
@@ -38,23 +41,23 @@ ol {
   list-style: none;
 }
 
+:focus{
+  outline: none;
+}
+
 .content{
   display: grid;
-	grid-template-rows: repeat(2, 1fr);
+	grid-template-rows: repeat(1, 1fr);
 	grid-template-columns: repeat(2, 1fr);
 	gap: 30px;
-  margin-left: 30px;
 	width: 1140px;
-	height: 534px;
-  margin-top: 133px;
-  padding: auto;
+  padding: 0;
 }
 
 .result{
   width: 711px;
-  height: 456px;
   gap:16px;
-  padding-top: 78px;
+  padding-top: 82px;
 }
 
 .result__video-container{
@@ -70,17 +73,16 @@ ol {
   height: 100%;
   object-fit: cover;
   object-position: 0;
+  position:absolute;
 }
 
 .search-form{
   grid-area: 2/1/3/2;
   display: flex;
   justify-content: space-between;
-  /*width: fit-content;*/
 }
 
 .search-form__fieldset-title{
-  height: 22px;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -90,6 +92,7 @@ ol {
 .content__details{
   width: 100%;
   height: 100%;
+  margin-top: 6px;
 }
 
 .title{
@@ -98,9 +101,11 @@ ol {
   font-weight: 700;
   line-height: 71px;
   width: 260px;
-  height: 210px;
   text-transform: uppercase; 
   grid-area: 1/2/2/3;
+  text-overflow: ellipsis; 
+  white-space: nowrap; 
+  overflow: hidden;
 }
 
 .content__accent{
@@ -110,16 +115,15 @@ ol {
 .content__list{
   grid-area: 2/2/3/3;
   overflow-y: scroll;
-  overflow-x: hidden;
-  height: 298px;
-  width: 403px;
-  margin-top: 26px;
+  overflow-x: auto;
+  height: 304px;
+  width: 415px;
+  margin-top: 18px;
   position: relative;
 }
 
 .content__list-item{
   width: 392px;
-  height: 107px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -132,11 +136,28 @@ ol {
 
 .content__card-link{
  text-decoration: none;
+ width: 392px;
+ margin-left: 2px;
+ display: block;
 }
+
+.content__card-link:first-of-type{
+  margin-top: 2px;
+ }
 
 .content__card-link:active{
   background-color: #545050;
  }
+
+ .content__card-link:focus-visible{
+  padding: 2px; 
+  outline: 1px solid #FFF; 
+ }
+
+ .content__card-link:hover{
+  text-decoration: underline;
+  color: #FFF;
+}
 
 .content__video-card{
   width: 394px;
@@ -145,22 +166,11 @@ ol {
   justify-content: space-between;
 }
 
-.content__video-card:focus-visible{
-  padding: 2px;
-  outline: 1px solid #FFF;
-}
-
 .content__card-link_current{
   background-color: #545050;
 }
 
-.content__video-card:hover{
-  text-decoration: underline;
-  color: #FFF;
-}
-
 .content__video-card-description-container{
-  height: 101px;
   gap: 6px;
   padding-top: 4px;
   padding-left: 2px;
@@ -168,7 +178,6 @@ ol {
 
 .content__video-card-title{
   width: 200px;
-  height: 30px;
   font-family: 'Oswald', sans-serif;
   font-weight: 700;
   font-size: 30px;
@@ -179,7 +188,6 @@ ol {
 
 .content__video-card-description{
   width: 200px;
-  height: 65px;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -191,9 +199,10 @@ ol {
 .content__video-card-thumbnail{
   height: 106px;
   width:194px;
-  background-repeat: repeat;
   padding-top: 1px;
   padding-bottom: 1px;
+  object-fit: cover;
+  object-position: right;
 }
 
 .visually-hidden {
@@ -210,50 +219,35 @@ fieldset{
   border:0;
 }
 
-:focus{
-  border: 1px solid #FFF;
-  padding: 2px;
-}
-
-.search-form__textfield, search-form__textfield:focus-visible{
+.search-form__textfield{
   background-color: transparent;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
-  color: #FFFFFFB2;
+  color: #FFF;
   appearance: none;
-}
-
-.search-form__textfield:active{
-  border: 1px solid;
-}
-
-.search-form__textfield:has(:focus-visible){
-  border: 1px solid;
-  padding: 1px;
-}
-
-input{
+  width: 225px;
+  height: 27px;
   display: flex;
-  background-color: transparent;
-  width: 211px;
-  height: 22px;
   border-style: solid;
   border-color: #FFF;
   border-width: 1px 0px;
   gap: 10px;
   padding: 0;
-  appearance: none;
-  color: rgb(255, 255, 255, 0.7);
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-  font-family: 'Fira Sans Condensed', sans-serif;
 }
 
-textarea:focus, input:focus {
-  outline: none;
+.search-form__textfield::placeholder {
+  color: #FFFFFFB2;
+}
+
+.search-form__textfield:active{
+  border: 0px;
+}
+
+.search-form__label:has(:focus-visible){
+  border: 1px solid;
+  padding: 1px;
 }
 
 .search-form__label:hover:has(.search-form__pseudo-checkbox) {
@@ -275,11 +269,6 @@ textarea:focus, input:focus {
   margin-left: 12px;
 }
 
-.search-form__textfield{
-  width: 225px;
-  height: 27px;
-}
-
 .search-form__pseudo-checkbox{
   display: flex;
   justify-content: center;
@@ -288,30 +277,16 @@ textarea:focus, input:focus {
   inline-size: 19px;
   block-size: 19px;
   margin-right: 5px;
-  width: 19px;
   height: 19px;
 }
 
-.search-form__checkbox:checked + .search-form__pseudo-checkbox:after {
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
   content: "";
   position: relative;
   display: block;
   width: 15px;
   height: 15px;
   background-color: #fff;
-}
-
-.search-form__checkbox:focus{
-  outline: none;
-}
-
-.search-form__checkbox:focus-visible{
-  outline: 1px solid #fff;
-  outline-offset: 1px;
-}
-
-.search-form__pseudo-checkbox:checked{
-  border: 1px solid #545050;
 }
 
 .search-form__label{
@@ -328,8 +303,8 @@ textarea:focus, input:focus {
   line-height: 22px;
 }
 
-button{
-  height: 34px;
+.button {
+  min-height: 34px;
   padding-top: 6px;
   padding-bottom: 6px;
   cursor: pointer;
@@ -341,36 +316,33 @@ button{
   color: #fff;
   border: #fff solid 1px;
   background-color: transparent;
-  cursor: pointer;
 }
 
 .more-button{
   width: 396px;
   margin-top: 30px;
+  margin-left: 2px;
+  margin-bottom: 2px;
 }
 
-button:focus {
+.button:focus {
   outline: none;
 }
 
-button:focus-visible {
+.button:focus-visible {
   outline: 1px solid #fff;
   outline-offset: 1px;
 }
 
-button:active{
+.button:active{
  background-color: #545050 ;
 }
 
-button:hover{
+.button:hover{
   text-decoration: underline;
 }
 
 .search-form__submit-button{
   width: 194px;
   margin-top: 20px;
-}
-
-.content__list::-webkit-scrollbar {
-  width: 0;
 }
