--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,11 @@ ol {
   list-style: none;
 }
 
-:focus{
+.content__card-link:focus{
+  outline: none;
+}
+
+.search-form__textfield:focus{
   outline: none;
 }
 
@@ -61,7 +65,6 @@ ol {
 }
 
 .result__video-container{
-  grid-area: 1 / 1 / 2 / 2;
   width: 711px;
   height: 386px;
   margin-bottom: 16px;
@@ -73,11 +76,9 @@ ol {
   height: 100%;
   object-fit: cover;
   object-position: 0;
-  position:absolute;
 }
 
 .search-form{
-  grid-area: 2/1/3/2;
   display: flex;
   justify-content: space-between;
 }
