--- a/styles/style.css
+++ b/styles/style.css
@@ -51,10 +51,10 @@ ol {
 
 .content{
   display: grid;
-	grid-template-rows: repeat(1, 1fr);
-	grid-template-columns: repeat(2, 1fr);
-	gap: 30px;
-	width: 1140px;
+  grid-template-rows: repeat(1, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+  width: 1140px;
   padding: 0;
 }
 
@@ -104,9 +104,6 @@ ol {
   width: 260px;
   text-transform: uppercase; 
   grid-area: 1/2/2/3;
-  text-overflow: ellipsis; 
-  white-space: nowrap; 
-  overflow: hidden;
 }
 
 .content__accent{
@@ -115,7 +112,7 @@ ol {
 
 .content__list{
   grid-area: 2/2/3/3;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: auto;
   height: 304px;
   width: 415px;
@@ -216,10 +213,6 @@ ol {
   white-space: nowrap;
 } 
 
-fieldset{
-  border:0;
-}
-
 .search-form__textfield{
   background-color: transparent;
   font-family: 'Fira Sans Condensed', sans-serif;
@@ -247,8 +240,8 @@ fieldset{
 }
 
 .search-form__label:has(:focus-visible){
-  border: 1px solid;
-  padding: 1px;
+  outline: 1px solid #fff;
+  outline-offset: 1px;
 }
 
 .search-form__label:hover:has(.search-form__pseudo-checkbox) {
@@ -262,7 +255,6 @@ fieldset{
 
 .search-form__fieldset{
   width: 225px;
-  height: 54px;
   gap: 5px;
 }
 
